add section on monitoring API

--- a/1.0.0-rc0-release-notes.md
+++ b/1.0.0-rc0-release-notes.md
@@ -106,7 +106,20 @@ for result in transformed {
 **Note**: If you wish to take advantage of `LazySequenceProtocol`, you cannot throw from the closure passed to `map` / `filter` / etc. Those variants only exist on `Sequence`, and calling them will result in the sequence being eagerly loaded into memory before the closure is applied.
 
 ## Improved Monitoring API
-[insert here]
+### More Flexible Event Handling
+Prior to this release, the driver posted all monitoring events to a `NotificationCenter`, either one provided to it via the `ClientOptions` or the application's default center. This was overly restrictive, as it _required_ you to interface with `NotificationCenter` in order to receive monitoring events, even if `NotificationCenter`s weren't used anywhere else in your application.
+
+Starting in this release, you can attach your own handler types that conform to the new `CommandEventHandler` and `SDAMEventHandler` protocols to `MongoClient` via `MongoClient.addCommandEventHandler` and `MongoClient.addSDAMEventHandler` respectively. The appropriate monitoring events will then be passed to them directly via the protocol requirement methods. From there, you may then do whatever processing of the events you want, including, but not limited to, posting to a `NotificationCenter`. 
+
+Also, there are ergonomic overloads for both of the handler adding methods that take in callbacks if you don't want to define your own handler type:
+```swift
+client.addCommandEventHandler { event in
+    print(event)
+    // be sure not to strongly capture client in here!
+}
+```
+### Restructured Event Types
+Prior to this release, all monitoring events were defined as their own `struct`s, and extracting the right event type required lots of downcasting. Starting in this release, common event types are grouped into `enum`s, namely into the `SDAMEvent` and `CommandEvent` `enum`s, whose cases' associated values are the existing event `struct`s. This models events in a way that makes better use of the Swift type system by removing the need for downcasting, allowing like events to be grouped together, and enabling relevant event types to be switched over exhaustively.
 
 ## Included Tickets
 ### Bug
