minor updates to monitoring section

--- a/1.0.0-rc0-release-notes.md
+++ b/1.0.0-rc0-release-notes.md
@@ -107,9 +107,9 @@ for result in transformed {
 
 ## Improved Monitoring API
 ### More Flexible Event Handling
-Prior to this release, the driver posted all monitoring events to a `NotificationCenter`, either one provided to it via the `ClientOptions` or the application's default center. This was overly restrictive, as it _required_ you to interface with `NotificationCenter` in order to receive monitoring events, even if `NotificationCenter`s weren't used anywhere else in your application.
+Prior to this release, `MongoClient` posted all monitoring events to a `NotificationCenter`, either one provided to it via `ClientOptions` or the application's default center. This was overly restrictive, as it _required_ you to interface with `NotificationCenter` in order to receive monitoring events, even if `NotificationCenter` wasn't used anywhere else in your application.
 
-Starting in this release, you can attach your own handler types that conform to the new `CommandEventHandler` and `SDAMEventHandler` protocols to `MongoClient` via `MongoClient.addCommandEventHandler` and `MongoClient.addSDAMEventHandler` respectively. The appropriate monitoring events will then be passed to them directly via the protocol requirement methods. From there, you may then do whatever processing of the events you want, including, but not limited to, posting to a `NotificationCenter`. 
+Starting in this release, you can attach your own handler types that conform to the new `CommandEventHandler` and `SDAMEventHandler` protocols to via `MongoClient.addCommandEventHandler` and `MongoClient.addSDAMEventHandler` respectively. The appropriate monitoring events will then be passed to them directly via the protocol requirement methods. From there, you can do whatever processing of the events you want, including, but not limited to, posting to a `NotificationCenter`. 
 
 Also, there are ergonomic overloads for both of the handler adding methods that take in callbacks if you don't want to define your own handler type:
 ```swift
