--- a/1.0.0-rc0-release-notes.md
+++ b/1.0.0-rc0-release-notes.md
@@ -5,14 +5,14 @@ We are very excited to announce the first release candidate for our upcoming 1.0
 This release contains a number of major changes to the driver, as detailed in the following sections.
 
 ## Asynchronous, SwiftNIO-based API
-The driver now contains both and asynchronous and synchronous APIs for working with MongoDB from Swift.
+The driver now contains both asynchronous and synchronous APIs for working with MongoDB from Swift.
 These APIs are contained in two modules, named `MongoSwift` (async) and `MongoSwiftSync` (sync). Depending on which API you would like to use, you can depend on either one of those modules.
 
 The asynchronous API is implemented by running all blocking code off the calling thread in a SwiftNIO `NIOThreadPool`. The size of this thread pool is configurable via the `threadPoolSize` property on `ClientOptions`.
 
 **Vapor developers**: please note that since we depend on SwiftNIO 2, as of this reelase the driver will not be compatible with Vapor versions < 4, as Vapor 3 depends on SwiftNIO 1.0.
 
-All of the server-side Swift examples in the `Examples/` directory of this repositoy have now been updated to use the asynchronous API.
+All of the web framework examples in the `Examples/` directory of this repository have now been updated to use the asynchronous API.
 
 The synchronous API has been reimplemented as a wrapper of the asynchronous API. You may also configure the size of the thread pool when constructing a synchronous `MongoClient` as well.
 
@@ -32,7 +32,8 @@ Alternatively, as described in #387 you can clone the driver, run `make project`
 
 ## Driver `Error` Types are now `struct`s
 Like many Swift libraries, the driver previously used `enum`s to represent a number of different error types. However, over time we realized that enums were a poor fit for modeling MongoDB errors. 
-Anytime we wished to add an additional associated value to one of the error cases in an enum, it would be a breaking change. Over time the MongoDB server has added more and more information to the errors it returns, and enums made it difficult for our errors to evolve gracefully along with the server.
+Anytime we wished to add an additional associated value to one of the error cases in an enum, or to add a new case to one of the enums, it would be a breaking change. 
+Over time the MongoDB server has added more and more information to the errors it returns, and has added various new categories of errors. Enums made it difficult for our errors to evolve gracefully along with the server.
 
 Now, each type of error that was previously an enum case is represented as a `struct`, and similar errors are grouped together by protocols rather than by being cases in the same enum.
 
@@ -68,7 +69,9 @@ for result in cursor {
 Since errors are now propagated in this way, the `error` property has been removed from both types and inspecting it is no longer necessary.
 
 ### `next()` now blocks while waiting for more results
-This change only affects `ChangeStream`s and tailable `MongoCursor`s, where a cursor is kept alive to watch for potential future matching results. (By default, cursors are *not* tailable.)
+This change only affects `ChangeStream`s and tailable `MongoCursor`s. (See: [change streams](https://docs.mongodb.com/manual/changeStreams/), [tailable cursors](https://docs.mongodb.com/manual/core/tailable-cursors/).) (By default, cursors are *not* tailable.)
+These types will stay alive even after their initial results have been exhausted, and will continue to receive new matching documents (or events in the case of change streams) if and when they become available.
+
 In the past, `next()` would simply return `nil` immediately if a next result was not available. This would require a user who wants to wait for the next result to continuously loop and check for a non-nil result.
 Now, `next()` will internally poll until a new result is obtained or the cursor is killed (you can trigger this yourself by calling `kill`).
 
@@ -79,7 +82,7 @@ For non-tailable `MongoCursor`s, the cursor is automatically killed as soon as a
 Note that a consequence of this change is that working with a tailable `MongoCursor` or a `ChangeStream` via `Sequence` methods or a `for` loop can block while waiting for new results, since many `Sequence` methods are implemented via `next()`.
 
 ### Conformance to `LazySequenceProtocol`
-`MongoCursor` and `ChangeStream` now contain to [`LazySequenceProtocol`](https://developer.apple.com/documentation/swift/lazysequenceprotocol), which inherits from `Sequence` (which these types conformed to previously).
+`MongoCursor` and `ChangeStream` now conform to [`LazySequenceProtocol`](https://developer.apple.com/documentation/swift/lazysequenceprotocol), which inherits from `Sequence` (which these types conformed to previously).
 
 This allows the standard library to defer applying operations such as `map` and `filter` until the elements of the resulting `Sequence` are actually accessed. This is beneficial for cursors and change streams as you can transform their elements without having to load the entire result set into memory at once. For example, consider the following snippet. The `map` call will be lazily applied as each element is read from the cursor in step 3:
 
